# wa_toolkit

./: .gitignore  README.md  WA_TOOLKIT_DESIGN.md  __init__.py  ai_extractor.py  errors.py  logger.py  pyproject.toml  requirements.txt  session.py  simulator.py  state_machine.py
examples/restaurants/: restaurant_concierge_design.md  restaurant_concierge_implementation.md  restaurant_technical_bridge.md
examples/restaurants/code/: reservation_bot.py  waitlist_logic.py
